--- a/mokhystyles.css
+++ b/mokhystyles.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #d9d9d9;
+}
+
 #navbar{
     background-color: #4f5d4c;
     font-family: Arial, Helvetica, sans-serif;
